competed tweet display area with hover affect and fixed some cosmetic alignment issues

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,14 +1,16 @@
-header {
+.header-background {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 400px;
+  /* height: 400px; */
   width: 100%;
+  margin-top: 120px;
   background-color: #e09500;
 background-image: url("https://www.transparenttextures.com/patterns/arches.png");
 /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
+
 
 .profile {
   display: flex;
