--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,7 +28,8 @@ body {
 
  .container {
    display: flex;
-   justify-content: center; 
+   justify-content: center;
+   flex-direction: column;
    /* align-items: center; */
    color: #545149;
    background-color: #f4f1ec;
