--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -11,7 +11,7 @@
   border: none;
   border-bottom: 2px solid #545149;
   width: 100%;
-  height: 50px;
+  height: 55px;
   font-weight: 700;
   /* font-size: 50px; */
   background-color: transparent;
